...
        </array>
    </customFonts>
    <scenes>
        <!--Transformer-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="TransformerListViewControllerId" id="BYZ-38-t0r" customClass="TransformerListViewController" customModule="Transformer" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wh1-WG-Ft1">
                                <rect key="frame" x="20" y="76" width="335" height="505"/>
...
                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="60" id="XdS-fw-KyW"/>
                                                        <constraint firstAttribute="width" secondItem="Y63-Td-dOQ" secondAttribute="height" multiplier="1:1" id="shA-Bs-jt1"/>
                                                    </constraints>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frV-a9-oRP">
                                                    <rect key="frame" x="92" y="40" width="153" height="18"/>
                                                    <fontDescription key="fontDescription" name="TransformersMovie" family="Transformers" pointSize="24"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJU-dj-t75">
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KDf-Qs-LaL">
                                                                <rect key="frame" x="245" y="37.5" width="36" height="36"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" constant="36" id="6mT-Ko-3t0"/>
                                                                    <constraint firstAttribute="height" constant="36" id="CBN-Ei-v0h"/>
                                                                </constraints>
                                                                <state key="normal" image="plusButton"/>
                                                            </button>
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XAL-30-TWd">
                                                                <rect key="frame" x="297" y="37.5" width="36" height="36"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="width" constant="36" id="Kvs-t5-s8T"/>
                                                                    <constraint firstAttribute="height" constant="36" id="Tlk-RM-m6K"/>
                                                                </constraints>
                                                                <state key="normal" image="minusButton"/>
                                                            </button>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zis-Gh-faH">
                                                                <rect key="frame" x="157.5" y="48.5" width="4.5" height="10"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="10" id="vx9-i0-rh0"/>
                                                                </constraints>
...
